adding last code

--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,24 @@ footer{
     margin-top: .8rem;
     margin-bottom: 1rem;
   }
+
+  @media screen and (max-width: 520px) {
+    .small-size-screen{
+        display:flex;
+        flex-direction: column;
+
+    }
+    .small-size-screen img{
+        width:100px;
+    }
+    .side-text{
+        font-size: 36px;
+        text-align: center;
+        font-weight: bolder;
+    }
+    .side-sub-text{
+        font-size:20px;
+        font-weight: bold;
+        text-align: center;
+    }
+  }
